Code update regarding Dashboard Signin/Signup feature